# yali-github

./: README.md  pyproject.toml
.github/workflows/: python-package-conda.yml
Scripts/: hello.py  portscan.py  subtrace.py  whois_lookup.py
Scripts/Checklist/: webapp-checklist.md
Scripts/Notes/: vapt-methodology.md
Scripts/subtrace/: README.md  subtrace.py
